--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id='parkme-header'>
       <img src="https://images-platform.99static.com/yVVRUem4DnW8veGgdYv6XUibcgI=/500x500/top/smart/99designs-contests-attachments/12/12816/attachment_12816188" alt="parkme-header">
-      <span><button type="button" name="button">Home</button></span>
+      <span><button id='home' type="button" name="button">Home</button></span>
     </div>
     <div class="container">
       <form class="new-listing-form" style="">
@@ -22,7 +22,7 @@
 
         <input id="listing-location" type="text" name="location" value="" placeholder="Enter listing location..." class="input-text">
 
-        <input id="listing-price" type="number" name="price" value="" placeholder="Enter listing price..." class="input-text">
+        <input id="listing-price" type="number" step="0.01" name="price" value="" placeholder="Enter listing price..." class="input-text">
 
         <input type="submit" name="submit" value="Create New Listing" class="submit">
       </form>
