--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <span><button id='home' type="button" name="button">Home</button></span>
     </div>
     <div class="container">
-      <form class="new-listing-form" style="">
+      <form class="new-listing-form">
         <h3>Create a listing!</h3>
 
         <input id="listing-title" type="text" name="title" value="" placeholder="Enter a listing title..." class="input-text">
@@ -29,6 +29,14 @@
     </div>
     <p style='text-align:center' >Join the ParkMe Family! <button id='new-listing-btn'>Add a listing !</button></p>
 
+    <div class="login" id="login-form">
+      <form>
+        <input type="Username" placeholder="Username" id="username" />
+        <input type="Name" placeholder="Name" id="name" />
+        <input type="submit" value="Log In" id="login" />
+        <input type="submit" value="Sign Up" id="signup" />
+      </form>
+    </div>
 
     <div id="listings-collection">
 
