--- a/index.html
+++ b/index.html
@@ -38,6 +38,25 @@
       </form>
     </div>
 
+    <div class="edit-container">
+      <form id="edit-listing-form">
+        <input class="listing-id" type="hidden" name="listing" value="">
+
+        <input id="t-edit" type="text" name="title" value="" placeholder="Enter a listing title..." class="input-text">
+
+        <input id="image-edit" type="text" name="image" value="" placeholder="Enter listing image URL..." class="input-text">
+
+        <input id="des-edit" type="text" name="description" value="" placeholder="Enter listing description..." class="input-text">
+
+        <input id="location-edit" type="text" name="location" value="" placeholder="Enter listing location..." class="input-text">
+
+        <input id="price-edit" type="number" step="0.01" name="price" value="" placeholder="Enter listing price..." class="input-text">
+
+        <input type="submit" name="submit" value="Edit Listing" class="submit">
+      </form>
+    </div>
+
+
     <div id="listings-collection">
 
     </div>
